# msdial2anndata

./: LICENSE  README.md  pyproject.toml
inputs/GCMS_meko/: Height_1_2023321322.txt  README.md
msdial2anndata/: __init__.py  msdial2anndata.py
