[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msdial2anndata"
version = "0.0.1"
authors = [
  { name="Kozo Nishida", email="kozo.nishida@gmail.com" },
]
description = "FILL ME THE DESCRIPTION."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
]
dependencies = [
  "anndata",
]

[project.urls]
Homepage = "https://github.com/systemsomicslab/msdial2anndata"
Issues = "https://github.com/systemsomicslab/msdial2anndata/issues"
